Pagia inicial pronta

--- a/public/estilo.css
+++ b/public/estilo.css
@@ -1,3 +1,4 @@
+@import "node_modules/react-image-gallery/styles/css/image-gallery.css";
 body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
