--- a/src/componentes/IndexPage/loginAndRegister.css
+++ b/src/componentes/IndexPage/loginAndRegister.css
@@ -1,32 +1,67 @@
-@import url('https://fonts.googleapis.com/css?family=Lobster|Sofia');
+@font-face {
+    font-family: helveticaneue;
+    src: url('./static/Friz Quadrata TT.ttf');
+}
 .fontFamilySofia{
-    font-family: 'Sofia', cursive;
+    font-family: 'helveticaneue', cursive;
 }
 .fontFamilyLobster{
-font-family: 'Lobster', cursive;
+font-family: 'helveticaneue', cursive;
 }
 
 .fontSmall{
-    font-size: 2em;
+    font-size: 1.3em;
 }
 
 .fontMedium{
-    font-size: 3em;
+    font-size: 16px;
 }
 
-.fontBig{
-    font-size: 4em;
+.fontBig h1{
+    font-size: 3.5em;
 }
 
 .textCentral{
     position: relative;
-    top: 200px;
+    top: 18em;
 }
 .scrollDown{
     position: relative;
-    top: 50em;
+    top: 25em;
 }
 
+.scrollDown:hover{
+    animation: pulse 0.7s infinite;
+    margin: 0 auto;
+    color: #ffd37a;
+    text-decoration: none;  
+    display: table;
+    animation-direction: alternate;
+    -webkit-animation-name: pulse;
+    animation-name: pulse;
+  }
+  
+  @-webkit-keyframes pulse {
+    0% {
+      -webkit-transform: scale(1);
+      -webkit-filter: brightness(100%);
+    }
+    100% {
+      -webkit-transform: scale(1.1);
+      -webkit-filter: brightness(200%);
+    }
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+      filter: brightness(100%);
+    }
+    100% {
+      transform: scale(1.1);
+      filter: brightness(200%);
+    }
+  }
 .BackgroundInitial{
     background: url("./static/img1.jpg");
     background-repeat: no-repeat;
@@ -64,6 +99,7 @@ font-family: 'Lobster', cursive;
 
 .textGoldColor{
     color: #f9c154;
+    text-shadow: 3px 4px 4px rgba(15,40,47,0.48); ;
 }
 
 .textBlueColor{
@@ -72,6 +108,10 @@ font-family: 'Lobster', cursive;
 
 .marginCenter{
     align-content: center;
+}
+
+.conteudo{
+    margin: 2.5em 0;
 }
 
 .buttons :hover{
