--- a/public/estilo.css
+++ b/public/estilo.css
@@ -1,4 +1,7 @@
 @import "node_modules/react-image-gallery/styles/css/image-gallery.css";
+#root,body,html,.App{
+  height: 100%;
+}
 body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
