--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+body,html{
+  min-height: 100%;
+}
 .App {
   text-align: center;
 }
-
+/*
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -31,3 +34,5 @@
     transform: rotate(360deg);
   }
 }
+
+*/
