--- a/src/componentes/World/components/widgets.css
+++ b/src/componentes/World/components/widgets.css
@@ -1,3 +1,14 @@
 .containerWidgets{
     
 }
+
+
+.gallery{
+    width: 150px;
+    height: 150px;
+}
+.ul-widgets{
+    bottom: 80%;  
+    float: left;
+    position: absolute;
+}
